# pre-training-rag

./: .env.example  .gitignore  HomeButler-AI-Projet-Fil-Rouge.md  Modelfile  PREREQUIS-FORMATION-RAFT.md  README.md  docker-compose.yml  draft.md  pyproject.toml  requirements.txt  requirements_atelier01.txt  requirements_atelier02.txt  requirements_atelier03.txt  requirements_atelier04.txt  requirements_atelier05.txt  requirements_atelier06.txt  slides-formation-raft.md
api/: Dockerfile  limiter.py  main.py
api/routers/: chat.py  consumption.py  orders.py  products.py  rag.py
ateliers/: README.md
ateliers/atelier-00-prevol/: .cursorrules  GUIDE-ELEVE.md
ateliers/atelier-01-llm-baseline/: .cursorrules  GUIDE-ELEVE.md  GUIDE-FORMATEUR.md  README.md  exercice.py  solution.py
ateliers/atelier-02-rag-simple/: .cursorrules  GUIDE-ELEVE.md  GUIDE-FORMATEUR.md  README-formateur.md  evaluate_rag.py  exercice.py  (+1 more)
examples-supports/: slides-inspiration-1.md  slides-inspiration-2.md
homebutler/: config.py
homebutler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: 01_llm_baseline.ipynb  02_ingestion_vectorisation.ipynb  02_rag_simple_faiss.ipynb  03_finetuning_lora.ipynb
scripts/: augment_qa_dataset.py  check_atelier_ready.sh  generate_documents.py  generate_energy_data.py  generate_producers.py  generate_qa_dataset.py  preload_models.py  verify_branch_scope.sh
slides/: atelier-01-student.md  atelier-02-student.md  atelier-03-student.md  atelier-04-student.md  atelier-05-student.md  atelier-06-student.md
ui/: Dockerfile  app.py  gradio_prototype.py
(+148 files in other folders)
