[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homebutler"
version = "1.0.0"
description = "HomeButler AI — conciergerie domestique intelligente (projet fil rouge formation RAFT)"
requires-python = ">=3.11,<3.14"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["homebutler*"]
exclude = ["api*", "ui*", "scripts*", "notebooks*", "data*", "tests*"]
